--- a/iasfilepicker/build.gradle
+++ b/iasfilepicker/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0.0-rc1"
+        versionCode inappstory_utils_output_build
+        versionName inappstory_utils_output_version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
